--- a/netflix-ui/package.json
+++ b/netflix-ui/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
+    "framer-motion": "^12.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "redux": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
