--- a/netflix-ui/package.json
+++ b/netflix-ui/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
     "framer-motion": "^12.4.4",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-youtube": "^10.1.0",
     "redux": "^5.0.1",
     "zod": "^3.23.8"
   },
